--- a/client/src/pages/login.html
+++ b/client/src/pages/login.html
@@ -50,14 +50,14 @@
       </div>
       <!-- Microsoft Login-->
       <div class="q-login__ms-login" else>
-        <a click.delegate="tryAzureLogin()">
-          <label class="q-login__ms-login-button">
+        <a class="q-login__ms-login-button" click.delegate="tryAzureLogin()">
+          <label class="q-login__ms-login-button__label">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <path
                 d="M13.05,4.24L6.56,18.05L2,18L7.09,9.24L13.05,4.24M13.75,5.33L22,19.76H6.74L16.04,18.1L11.17,12.31L13.75,5.33Z"
               ></path>
             </svg>
-            <span t="general.mslogin"></span>
+            <span class="q-login__ms-login-button__label__text" t="general.mslogin"></span>
           </label>
         </a>
       </div>
