Fix q-item-picker html

--- a/client/src/pages/q-item-picker.html
+++ b/client/src/pages/q-item-picker.html
@@ -1,11 +1,10 @@
 <template>
-  <require from="https://fonts.googleapis.com/css?family=Roboto!css"></require>
+  <!-- <require from="https://fonts.googleapis.com/css?family=Roboto!css"></require>
   <require from="../styles/config.css"></require>
   <require from="../styles/layout.css"></require>
   <require from="../styles/fonts.css"></require>
-  <require from="../styles/q-form.css"></require>
-  <require from="../styles/app.css"></require>
-  <require from="./app.css"></require>
+  <require from="../styles/q-form.css"></require> -->
+  <require from="./q-item-picker.css"></require>
   <require from="../elements/atoms/box-icon.html"></require>
   <require from="../elements/item-preview/preview-container"></require>
   <require from="../elements/schema-editor/schema-editor"></require>
