Fix height issue

--- a/client/src/pages/q-item-picker.html
+++ b/client/src/pages/q-item-picker.html
@@ -9,7 +9,10 @@
   <require from="../elements/item-preview/preview-container"></require>
   <require from="../elements/schema-editor/schema-editor"></require>
 
-  <div class="livingdocs-component" style="width: calc(100vw - 16px)">
+  <div
+    class="livingdocs-component"
+    style="width: calc(100vw - 16px); margin-top: -56px"
+  >
     <div class="livingdocs-component-search">
       <div class="search">
         <input
