Add dialog css for legacy dialog

--- a/client/src/dialogs/legacy-dialog.html
+++ b/client/src/dialogs/legacy-dialog.html
@@ -1,4 +1,5 @@
 <template>
+  <require from="../styles/q-dialog.css"></require>
   <require from="./legacy-dialog.css"></require>
   <div class="q-dialog q-bar__legacy-dialog">
     <button-tertiary
